src/test/ui/parser/issue-10392-2.stderr
error: expected `}`, found `,`
  --> $DIR/issue-10392-2.rs:6:15
   |
LL |     let A { .., } = a();
   |             --^
   |             | |
   |             | expected `}`
   |             | If I were you, I would simply remove this comma
   |             `..` must be at the end and cannot have a trailing comma

error: aborting due to previous error

